--- a/Vistas/Layouts/styles.css
+++ b/Vistas/Layouts/styles.css
@@ -65,3 +65,56 @@ a:visited:hover{
 .form-floating > .form-control:not(:focus)::placeholder{/* Se cambia el color del placeholder de los input flotantes a transparente cuando el input está activo*/
     color: transparent;
 }
+
+.table-head{
+    background: #808692;
+}
+
+/* .overflow-x{
+    overflow-x: auto;
+} */
+
+.min-w-900{
+    min-width: 1000px;
+}
+
+td{
+    width: fit-content;
+}
+
+.dataTables_paginate{
+    display: flex !important;
+    justify-content: center;
+    width: 100%;
+    margin: 2rem 0;
+}
+
+.dataTables_paginate a{
+    text-decoration: none;
+}
+
+.dataTables_paginate a:hover{
+    cursor: pointer;
+}
+
+.dataTables_paginate>span{
+    margin: 0 0.5rem;
+}
+
+.dataTables_paginate .disabled{
+    color: #a5acb3;
+    cursor:initial;
+}
+.dataTables_paginate .disabled:hover{
+    cursor:default;
+}
+
+.dataTables_paginate>span>a{
+    border-radius: 100% !important;
+    padding: 0.5rem 0.75rem;
+    color: #a5acb3;
+}
+.dataTables_paginate>span>a.current{
+    color: #FFFFFF;
+    background: #0163AC;
+}
