Añadir footer a la pagina de inicio vacia e incluir archivo de creacion de las tablas en el directorio Db

--- a/Vistas/Layouts/styles.css
+++ b/Vistas/Layouts/styles.css
@@ -114,3 +114,11 @@ td{
     color: #FFFFFF;
     background: #0163AC;
 }
+
+#footerLogo{
+    height: 75% !important;
+    opacity: 50%;
+}
+#footerLogo:hover{
+    opacity: 100%;
+}
