Anadir modal de cita, cancelar cita y correo de notificacion de registro

--- a/Vistas/Layouts/styles.css
+++ b/Vistas/Layouts/styles.css
@@ -103,6 +103,10 @@ td{
     width: fit-content;
 }
 
+.text-left{
+    text-align: start;
+}
+
 .dataTables_paginate{
     display: flex !important;
     justify-content: center;
