--- a/Vistas/General/Calendario/calendario.css
+++ b/Vistas/General/Calendario/calendario.css
@@ -23,7 +23,6 @@
     background-color: var(--vanilla-calendar-bg-color);
     border-radius: var(--vanilla-calendar-border-radius);
     border: solid 1px var(--vanilla-calendar-border-color);
-    box-shadow: 0 4px 22px 0 rgba(0, 0, 0, 0.05);
     margin: 0 auto;
     overflow: hidden;
     width: 100%;
@@ -48,6 +47,12 @@
     } 
     .vanilla-calendar-body{
         flex-grow: 2;
+    }
+}
+
+@media only screen and (max-height: 800px){
+    .vanilla-calendar {
+        height: 50%;
     }
 }
 
