--- a/Vistas/Layouts/styles.css
+++ b/Vistas/Layouts/styles.css
@@ -79,6 +79,10 @@ a:visited:hover{
     color: #01497f;
 }
 
+.nav-link:hover{
+    text-decoration: underline;
+}
+
 .back:hover>i{
     color: #FFFFFF !important;
 }
